--- a/AkkaTestApi.csproj
+++ b/AkkaTestApi.csproj
@@ -6,6 +6,8 @@
 
     <ItemGroup>
       <PackageReference Include="Akka" Version="1.4.4" />
+      <PackageReference Include="Akka.DI.Core" Version="1.4.4" />
+      <PackageReference Include="Akka.DI.Extensions.DependencyInjection" Version="1.4.15" />
     </ItemGroup>
 
 </Project>
